# qc-applications

./: .gitignore  .pylintrc  AP-RE.py  FermiHubbardExample.ipynb  HighTemperatureSuperConductorExample.ipynb  License.md  MagneticLattices.ipynb  PhotosynthesisExample.ipynb  README.md  RuClExample.ipynb  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: lint-test.yml  lint.yml  mypy.yml  mypy_pr.yml  other-lint-test.yml  pylint-badge.yml  pylint.yml  pyright.yml  tests.yml
data/: CO2_reduciton_CoPc.xyz  RuCl_test_input.csv  water_oxidation_Co2O9H12.txt  water_oxidation_Co4O4.xyz
docs/source/: api.rst  conf.py  index.rst  qca.rst  usage.rst
notebooks/: DickeModelExample.ipynb  ExoticPhasesExample.ipynb  HighTemperatureSuperConductorExample.ipynb  MagneticLattices.ipynb  PhotosynthesisExample.ipynb  QuantumChromoDynamics.ipynb  QuantumChromoDynamicsExample.ipynb  RuClExample.ipynb  state_preparation_and_measurement.json
notebooks/QCD/: forward_scattering_re.json
scripts/: AP-RE.py  DickeModel.py  ExoticPhasesRe.py  HTSC-one-band-RE.py  HTSC-three-band-RE.py  HTSC-two-band-RE.py  QCD-RE.py  RuCl-Dynamics-RE.py  RuCl-GSEE-RE.py  RuCl-RE.py  TavisCummingsModel.py
src/qca/: __init__.py  hamiltonian_utils.py  utils.py
src/qca/utils/: __init__.py  algo_utils.py  chemistry_utils.py  hamiltonian_utils.py  utils.py
tests/: hamiltonian_utils_test.py  utils_test.py
