[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "qca"
version = "0.0.1"
dynamic = ["dependencies"]
requires-python = ">=3.9"
description = "Documentation of Applications for Quantum Computers"
readme = "README.md"
license = {file = "License.md"}
classifiers = [
  "Programming Language :: Python"
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
